--- a/ieee-template/rv-paper.tex
+++ b/ieee-template/rv-paper.tex
@@ -23,7 +23,7 @@
 %\usepackage{amssymb}  % assumes amsmath package installed
 
 \title{\LARGE \bf
-Preparation of Papers for IEEE Sponsored Conferences \& Symposia* test studentA
+Preparation of Papers for IEEE Sponsored Conferences \& Symposia* test studentA and StudentB and D
 }
 
 
